[gd_scene load_steps=8 format=3 uid="uid://bf13fw4a182df"]

[ext_resource type="Script" path="res://bake_screen.gd" id="1_g4ybv"]
[ext_resource type="PackedScene" uid="uid://cr8fuisaekftg" path="res://layer.tscn" id="2_3vss3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lccqg"]
bg_color = Color(0.672064, 0.672064, 0.672064, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wn2ut"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjfx7"]
bg_color = Color(0.898039, 0, 0.196078, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqx8n"]
bg_color = Color(0.898039, 0, 0.196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtjrt"]
bg_color = Color(0.239216, 0.568627, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="BakeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4ybv")

[node name="Pans" type="Control" parent="."]
anchors_preset = 0
offset_left = 200.0
offset_top = 100.0
offset_right = 240.0
offset_bottom = 140.0

[node name="Panel1" type="Panel" parent="Pans"]
layout_mode = 0
offset_left = -10.0
offset_top = 150.0
offset_right = 110.0
offset_bottom = 190.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lccqg")

[node name="Panel2" type="Panel" parent="Pans"]
layout_mode = 0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lccqg")

[node name="Panel3" type="Panel" parent="Pans"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lccqg")

[node name="Panel4" type="Panel" parent="Pans"]
layout_mode = 0
offset_left = 20.0
offset_right = 80.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lccqg")

[node name="Oven" type="Panel" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 140.0
offset_right = 540.0
offset_bottom = 270.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wn2ut")

[node name="Label" type="Label" parent="Oven"]
layout_mode = 0
offset_right = 130.0
offset_bottom = 130.0
text = "Oven"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Layers" type="Control" parent="."]
anchors_preset = 0
offset_left = 650.0
offset_top = 100.0
offset_right = 690.0
offset_bottom = 140.0

[node name="Layer1" parent="Layers" instance=ExtResource("2_3vss3")]
offset_left = -10.0
offset_top = 150.0
offset_right = 110.0
offset_bottom = 190.0

[node name="Layer2" parent="Layers" instance=ExtResource("2_3vss3")]
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
layer_index = 1

[node name="Layer3" parent="Layers" instance=ExtResource("2_3vss3")]
offset_left = 10.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 90.0
layer_index = 2

[node name="Layer4" parent="Layers" instance=ExtResource("2_3vss3")]
offset_left = 20.0
offset_right = 80.0
layer_index = 3

[node name="Thermometer" type="Control" parent="."]
anchors_preset = 0
offset_left = 490.0
offset_top = 360.0
offset_right = 530.0
offset_bottom = 490.0

[node name="Outline" type="Panel" parent="Thermometer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fjfx7")

[node name="FillPanel" type="Panel" parent="Thermometer"]
layout_mode = 1
offset_top = 90.0
offset_right = 40.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qqx8n")

[node name="PerfectPanel" type="Panel" parent="Thermometer"]
layout_mode = 0
offset_top = 30.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gtjrt")

[node name="BakeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 400.0
offset_right = 430.0
offset_bottom = 450.0
text = "Bake!"
